--- a/heinews/src/main/resources/application.properties
+++ b/heinews/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/hei_news
 spring.datasource.username=postgres
 spring.datasource.password=psql
+
+spring.jpa.hibernate.ddl-auto=update
